# findthepocket

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.js  index.html  styles.css
plugin/: CMakeLists.txt
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/src/core/: CalibrationEngine.cpp  CalibrationEngine.h  ScoringEngine.cpp  ScoringEngine.h  SessionEngine.cpp  SessionEngine.h
plugin/src/dsp/: OnsetDetector.cpp  OnsetDetector.h
plugin/src/host/: TransportSync.cpp  TransportSync.h
plugin/tests/: CalibrationEngineTests.cpp  ScoringEngineTests.cpp
worklets/: onset-processor.js
